# Health-Facility-Pre-Triage-System

./: CMakeLists.txt  IOAble.cpp  IOAble.h  Menu.cpp  Menu.h  Patient.cpp  Patient.h  PreTriage.cpp  PreTriage.h  TestPatient.cpp  TestPatient.h  Ticket.h  Time.cpp  Time.h  TriagePatient.cpp  TriagePatient.h  Utils.h  main.cpp
